Changed to constant acceleration problem.